# redis-like-keyvalue-store

./: CMakeLists.txt
docs/: architecture.md
include/: command.h  command_parser.h  key_value_store.h  types.h  wal.h
src/: command_parser.cpp  key_value_store.cpp  main.cpp  wal.cpp
tests/: test_key_value_store.cpp
